--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,12 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
+
+
+/* .Spline {
+  position: relative;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+} */
